# Networks-and-Graphs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
Data/: Cities.csv  Data.xlsx  example_adjacency_matrix.csv
Notebooks/: NetworkX-tutorial.ipynb  basic_graph_example.ipynb  basic_problem_example.ipynb  cities_graph.ipynb  demonstration.ipynb
src/optinet/: __init__.py  create_graph.py  workflow_verification.py
src/optinet/genetic/: __init__.py  cross_section.py  mutate.py
tests/: conftest.py  test_create_graph.py  test_genetic.py  test_workflow.py  tests.sh
tests/test_data/: Cities.csv  multi_incidence_matrix.csv
