[metadata]
name = optinet
description = Should generate network which connects any arbitrary number of points in the most efficient way possible.
version = 0.0.1
author = Vitalii Morskyi, Bartosz Pekala
license = MIT
license_file = LICENSE
platforms = linux, win64
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = optinet
python_requires = >=3.6
install_requires =
    networkx>=2.3
    numpy>=1.1
    pandas>=1.1
    matplotlib>=3.0
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.2
    pytest-cov>=3.0
    mypy>=0.910
    mypy-extensions>=0.4
    flake8>=4.0
    tox>=3.24

[options.package_data]
optinet = py.typed

[flake8]
max-line-length = 120
